<resources>
    <string name="app_name">HAA_ROH</string>
    <string name="title_plan">计划</string>
    <string name="title_diary">日常</string>
    <string name="title_share">共享空间</string>
    <!-- Strings related to login -->
    <string name="prompt_email">请输入手机号</string>
    <string name="prompt_password">请输入验证码</string>
    <string name="action_sign_in">登录</string>
    <string name="action_sign_register">注册</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">手机号格式不正确</string>
    <string name="invalid_password">验证码格式错误</string>
    <string name="login_failed">"Login failed"</string>
    <string name="Login_TopText">手机快捷登录</string>
    <string name="Login_middleText">未注册的手机验证后会自动注册</string>
    <string name="Login_GetCode">获取验证码</string>
    <string name="userId">学习怪: </string>
    <string name="inputError">手机号或者验证码输入错误</string>
    <string name="sendAutoCodeError">验证失败，请从新登录</string>
    <!-- my Moudlle -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="back_plan">回到主页</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="head_defult">学习使我快乐学习使我快</string>
    <string name="head_usernameDefault">Tony Red</string>
    <string name="title_advice">建议与反馈</string>
    <string name="title_about">关于我们</string>
    <string name="title_setting">设置</string>
    <string name="title_edit">个人资料</string>
    <string name="plan_createText">创建新的计划</string>
    <string name="plan_editText">快速创建计划</string>
    <string name="plan_ToBeCompletedText">今天的计划</string>
    <string name="plan_CompletedText">已完成</string>
    <string name="plan_CreateAffirm">确认</string>
    <string name="icon_sure"></string>
    <string name="icon_return"></string>
    <string name="edit">快点编辑吧</string>
    <string name="delete">删除</string>
    <string name="sure">完成</string>
    <string name="discover">历史上的今天</string>
    <string name="report">您的今日报告</string>
    <string name="saying">每天一句</string>
</resources>