<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_plan"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/back_plan" />
    <item
        android:id="@+id/navigation_edit"
        android:icon="@drawable/edit"
        android:title="@string/title_edit"/>
    <item
        android:id="@+id/navigation_advice"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_advice" />

    <item
        android:id="@+id/navigation_about"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_about" />
    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/setting"
        android:title="@string/title_setting" />
</menu>