<?xml version="1.0" encoding="utf-8"?>


<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="data"
            type="com.example.haa_roh.bean.DailyData" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/item_image"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0"
            app:urlImage = "@{data.photo}"
            />

        <TextView
            android:id="@+id/item_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textColor="#99057369"
            android:textSize="19sp"
            android:textStyle="bold"
            android:text="@{data.time}"
            app:layout_constraintEnd_toStartOf="@id/item_week"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="2021/8/13" />

        <TextView
            android:id="@+id/item_week"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:textColor="#99057369"
            android:textSize="19sp"
            android:textStyle="bold"
            android:text="@{data.week}"
            app:layout_constraintBaseline_toBaselineOf="@id/item_time"
            app:layout_constraintEnd_toStartOf="@id/item_weather"
            app:layout_constraintStart_toEndOf="@id/item_time"
            tools:text="星期五" />

        <TextView
            android:id="@+id/item_weather"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:textColor="#99057369"
            android:textSize="19sp"
            android:textStyle="bold"
            android:text="@{data.weather}"
            app:layout_constraintBaseline_toBaselineOf="@id/item_time"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/item_week"
            />

        <androidx.cardview.widget.CardView
            android:id="@+id/item_saying"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            app:cardCornerRadius="5dp"
            app:cardElevation="10dp"
            app:contentPadding="7dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/item_time"
            app:layout_constraintBottom_toTopOf="@id/item_report"
            >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                tools:ignore="UselessLeaf">

                <ImageView
                    android:id="@+id/icon_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/icon_saying" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@id/icon_1"
                    android:layout_marginStart="15dp"
                    android:layout_marginLeft="15dp"
                    android:layout_toEndOf="@id/icon_1"
                    android:layout_toRightOf="@id/icon_1"
                    android:text="@string/saying"
                    android:textColor="#7BCED8"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:text="@{data.english}"
                    android:id="@+id/saying_English"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/icon_1"
                    android:layout_marginTop="5dp"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    tools:text="Never put off what you can do today until tomorrow." />

                <TextView
                    android:text="@{data.chinese}"
                    android:id="@+id/saying_Chinese"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/saying_English"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginTop="5dp"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    tools:text="相信你自己！" />
            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/item_report"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            app:cardCornerRadius="5dp"
            app:cardElevation="10dp"
            app:contentPadding="7dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@id/item_discover"
            app:layout_constraintTop_toBottomOf="@id/item_saying">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                tools:ignore="UselessLeaf">

                <ImageView
                    android:id="@+id/icon_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/icon_report" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@id/icon_2"
                    android:layout_marginStart="15dp"
                    android:layout_marginLeft="15dp"
                    android:layout_toEndOf="@id/icon_2"
                    android:layout_toRightOf="@id/icon_2"
                    android:text="@string/report"
                    android:textColor="#EACF81"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:text="@{data.reportTitle}"
                    android:id="@+id/report_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/icon_2"
                    android:layout_marginTop="5dp"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    tools:text="今天您一共制定了9个计划。。。完成了5个，继续加油。" />
            </RelativeLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/item_discover"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            app:cardCornerRadius="5dp"
            app:cardElevation="10dp"
            app:contentPadding="7dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/item_report">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                tools:ignore="UselessLeaf">

                <ImageView
                    android:id="@+id/icon_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/icon_discover" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@id/icon_3"
                    android:layout_marginStart="15dp"
                    android:layout_marginLeft="15dp"
                    android:layout_toEndOf="@id/icon_3"
                    android:layout_toRightOf="@id/icon_3"
                    android:text="@string/discover"
                    android:textColor="#85AC57"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <androidx.viewpager2.widget.ViewPager2
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:layout_below="@id/icon_3"
                    android:layout_marginTop="5dp"/>
            </RelativeLayout>

        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>

